change ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -60,9 +60,5 @@ typings/
 .env
 
 
-.idea/inspectionProfiles/
-.idea/misc.xml
-.idea/modules.xml
-.idea/watcherTasks.xml
-.idea/workspace.xml
+.idea/*
 scaffold-vue.iml
