--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "webpack-dev-server": "^2.5.0"
   },
   "dependencies": {
-    "vue": "^2.3.4"
+    "vue": "^2.3.4",
+    "vue-router": "^2.6.0"
   }
 }
